@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-#  $Id: Makefile,v 1.61 2011-03-25 01:32:31 remko Exp $
+#  $Id: Makefile,v 1.62 2011-07-12 02:03:37 remko Exp $
 #
 #		 Guru Makefile for GMT Version 4.x
 #			GNU make compatible
@@ -21,7 +21,7 @@
 #
 #	Author:	Paul Wessel, SOEST, University of Hawaii
 #
-#	Date:		20-SEPT-2009
+#	Date:		3-MAR-2011
 #-------------------------------------------------------------------------------
 #	Default setup
 #-------------------------------------------------------------------------------
@@ -34,7 +34,7 @@ include gmtsite.macros			# Site-specific settings determined by webmaster
 #-------------------------------------------------------------------------------
 
 help::
-	@grep '^#!' makefile | cut -c3-
+	@grep '^#!' Makefile | cut -c3-
 #!-------------------- MAKE HELP FOR WEBSITE --------------------
 #!
 #!make <target>, where <target> can be:
@@ -56,14 +56,11 @@ help::
 #!clean-test		: Empty the remote test directories
 #!hitmap		: Creates the GMT mirror page for site links
 #!---------------------------------------------------------------
-		
+
 # Place stuff in the GMT website/www directory:
 
-www/gmt/examples/ex01/example_01_100dpi.png:	../doc/examples/ex01/example_01.ps
+www/gmt/examples/ex01/example_01.zip:	../doc/fig/example_01.ps
 	sh webexamples.sh -s
-
-../doc/examples/ex01/example_01.ps:	../doc/examples/ex01/job01.sh
-	( cd ..; $(MAKE) -f GNUmakefile examples)
 
 #---------------------------------------------------------------------------
 # GMT VERSION UPDATE
@@ -87,6 +84,7 @@ update-www-live:	update-www-local
 #	First completely remove the live www files then copy them from the www-local files
 		ssh $(WEBSERVER) rm -rf $(LIVEWWWDIR)/gmt $(LIVEWWWDIR)/index.html
 		scp -r www/gmt $(WEBSERVER):$(LIVEWWWDIR)
+		scp -r www/5 $(WEBSERVER):$(LIVEWWWDIR)
 		scp www/index.html $(WEBSERVER):$(LIVEWWWDIR)
 #	Update the Perl script in the CGI bin dir
 		scp install_gmt_form.pl $(WEBSERVER):$(LIVECGIDIR)/install_gmt_form.pl
@@ -95,6 +93,7 @@ update-www-test:	update-www-local
 #	First completely remove the test www files then copy then from the www-local files
 		ssh $(WEBSERVER2) rm -rf $(LIVEWWWDIR2)/gmt $(LIVEWWWDIR2)/index.html
 		scp -r www/gmt $(WEBSERVER2):$(LIVEWWWDIR2)
+		scp -r www/5 $(WEBSERVER2):$(LIVEWWWDIR2)
 		scp www/index.html $(WEBSERVER2):$(LIVEWWWDIR2)
 #	For the test we want GMT_ftpsite to always be 0, and to use the test web site - hence these sed commands
 		echo "sB/gmt/B/gmttest/Bg" > job.sed
@@ -118,27 +117,22 @@ update-www-test:	update-www-local
 		ssh $(WEBSERVER2) sh $(LIVEWWWDIR2)/gmt/gmt_server_job.sh
 		rm -f gmt_server_job.sh tmp
 
-update-www-local:	../registration/gmt_usage.jpg gmt_mirrors.html www/gmt/gmt_releases.html www/gmt/examples/ex01/example_01_100dpi.png
+update-www-local:	../registration/gmt_usage.jpg gmt_mirrors.html www/gmt/gmt_releases.html www/gmt/examples/ex01/example_01.png
 		mkdir -p www/gmt
+		cp -f ../guru/install_gmt.sh www/gmt
 		cp -f gmt.html www/index.html
 		cp -f gmt_*.php gmt_*.html www/gmt
 		rm -f www/gmt/gmt_releases_template.html
 		cp -f newgmtguru www/gmt
-		cp -f *.gif linux.jpg osx.jpg unix.jpg vista.jpg www/gmt
+		cp -f *.gif *.ico linux.jpg osx.jpg unix.jpg vista.jpg www/gmt
 		cp -f gmt_*.png ../registration/gmt_usage.jpg www/gmt
 		cp -f soest_*.png www/gmt
 		cp -f ../src/README.TRIANGLE www/gmt
-		rm -r -f www/gmt/doc/*
-		cp -R -f doc/html doc/pdf www/gmt/doc
-		for ex in 01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29; do \
-			cd www/gmt/examples/ex$$ex; \
-			if [ -f example_$$ex.ps ]; then \
-				zip -r example_$$ex.zip example_$$ex.ps;\
-			fi; \
-			cd ../../../.. ;\
-		done
-		cp -R -f contrib www/gmt
-		rm -f www/gmt/examples/ex??/example_*.ps
+		rm -rf www/gmt/{doc,html,pdf}
+		cp -Rf ../doc/{html,pdf} www/gmt
+		cp -Rf contrib www/gmt
+		mkdir -p www/5
+		cp -f gmt5.html www/5/index.html
 		find www -name '.*' -exec rm -f {} \;
 		rm -f www/gmt/contrib/*.sh
 
@@ -154,20 +148,23 @@ update-ftp-live:
 		echo -n "The .message file byte length is over 1300 bytes: "; cat ../ftp/.message | wc -c; \
 		exit; \
 	fi
-	ssh $(FTPSERVER) 'rm -rf $(LIVEFTPDIR)/windows $(LIVEFTPDIR)/contrib $(LIVEFTPDIR)/*GMT* $(LIVEFTPDIR)/install_gmt $(LIVEFTPDIR)/VERSION'
+	ssh $(FTPSERVER) 'rm -rf $(LIVEFTPDIR)/windows $(LIVEFTPDIR)/contrib $(LIVEFTPDIR)/*GMT* $(LIVEFTPDIR)/install_gmt.sh $(LIVEFTPDIR)/VERSION'
 	ssh $(FTPSERVER) mkdir -p $(LIVEFTPDIR)/windows $(LIVEFTPDIR)/contrib
-	scp ../guru/install_gmt $(FTPSERVER):$(LIVEFTPDIR)
+	scp ../guru/install_gmt.sh $(FTPSERVER):$(LIVEFTPDIR)
 	scp ../ftp/GMT*.bz2 ../ftp/.message ../ftp/README.GMT ../ftp/VERSION $(FTPSERVER):$(LIVEFTPDIR)
 	scp ../ftp/GMT*.exe $(FTPSERVER):$(LIVEFTPDIR)/windows
 	scp ../ftp/gawk*.zip $(FTPSERVER):$(LIVEFTPDIR)/windows
+	scp ../ftp/Whale-watching_symbols_for_GMT.zip $(FTPSERVER):$(LIVEFTPDIR)/contrib
 	echo "cd $(LIVEFTPDIR)" > gmt_server_job.sh
 	for p in doc share src suppl triangle; do \
 		echo "rm -f GMT_$$p.tar.bz2" >> gmt_server_job.sh; \
-		echo "$(LN_S) GMT$(GMT_VERSION)_$$p.tar.bz2 GMT_$$p.tar.bz2" >> gmt_server_job.sh; \
+		echo "rm -f GMT5_$$p.tar.bz2" >> gmt_server_job.sh; \
+		echo "$(LN_S) GMT$(GMT_VERSION)_$$p.tar.bz2 GMT5_$$p.tar.bz2" >> gmt_server_job.sh; \
 	done
-	for p in basic gdal pdf; do \
-		echo "rm -f windows/GMT_$${p}_install.exe" >> gmt_server_job.sh; \
-		echo "(cd windows; $(LN_S) GMT$(GMT_VERSION)_$${p}_install.exe GMT_$${p}_install.exe)" >> gmt_server_job.sh; \
+	for p in install32 install64 pdf_install; do \
+		echo "rm -f windows/GMT_$${p}.exe" >> gmt_server_job.sh; \
+		echo "rm -f windows/GMT5_$${p}.exe" >> gmt_server_job.sh; \
+		echo "(cd windows; $(LN_S) GMT$(GMT_VERSION)_$${p}.exe GMT5_$${p}.exe)" >> gmt_server_job.sh; \
 	done
 	echo "rm -f $(LIVEFTPDIR)/gmt_server_job.sh" >> gmt_server_job.sh
 	scp gmt_server_job.sh $(FTPSERVER):$(LIVEFTPDIR)
@@ -180,7 +177,7 @@ update-gshhs-live:
 	scp ../ftp/GSHHS*.exe $(FTPSERVER):$(LIVEFTPDIR)/windows
 	echo "cd $(LIVEFTPDIR)" > gmt_server_job.sh
 	for p in coast high full; do \
-		echo "rm -f {GMT,GSHHS}_$$p.tar.bz2" >> gmt_server_job.sh; \
+		echo "rm -f GSHHS_$$p.tar.bz2" >> gmt_server_job.sh; \
 		echo "$(LN_S) GSHHS$(GSHHS_VERSION)_$$p.tar.bz2 GSHHS_$$p.tar.bz2" >> gmt_server_job.sh; \
 	done
 	echo "rm -f windows/GSHHS_highfull_install.exe" >> gmt_server_job.sh;
@@ -195,20 +192,23 @@ update-ftp-test:
 		echo -n "The .message file byte length is over 1300 bytes: "; cat ../ftp/.message | wc -c; \
 		exit; \
 	fi
-	ssh $(FTPSERVER2) 'rm -rf $(LIVEFTPDIR2)/windows $(LIVEFTPDIR2)/contrib $(LIVEFTPDIR2)/*GMT* $(LIVEFTPDIR2)/install_gmt $(LIVEFTPDIR2)/VERSION'
+#	ssh $(FTPSERVER2) 'rm -rf $(LIVEFTPDIR2)/windows $(LIVEFTPDIR2)/contrib $(LIVEFTPDIR2)/*GMT* $(LIVEFTPDIR2)/install_gmt.sh $(LIVEFTPDIR2)/VERSION'
 	ssh $(FTPSERVER2) mkdir -p $(LIVEFTPDIR2)/windows $(LIVEFTPDIR2)/contrib
-	scp ../guru/install_gmt $(FTPSERVER2):$(LIVEFTPDIR2)
+	scp ../guru/install_gmt.sh $(FTPSERVER2):$(LIVEFTPDIR2)
 	scp ../ftp/GMT*.bz2 ../ftp/.message ../ftp/README.GMT ../ftp/VERSION $(FTPSERVER2):$(LIVEFTPDIR2)
 	scp ../ftp/GMT*.exe $(FTPSERVER2):$(LIVEFTPDIR2)/windows
 	scp ../ftp/gawk*.zip $(FTPSERVER2):$(LIVEFTPDIR2)/windows
+	scp ../ftp/Whale-watching_symbols_for_GMT.zip $(FTPSERVER2):$(LIVEFTPDIR2)/contrib
 	echo "cd $(LIVEFTPDIR2)" > gmt_server_job.sh
 	for p in doc share src suppl triangle; do \
 		echo "rm -f GMT_$$p.tar.bz2" >> gmt_server_job.sh; \
-		echo "$(LN_S) GMT$(GMT_VERSION)_$$p.tar.bz2 GMT_$$p.tar.bz2" >> gmt_server_job.sh; \
+		echo "rm -f GMT5_$$p.tar.bz2" >> gmt_server_job.sh; \
+		echo "$(LN_S) GMT$(GMT_VERSION)_$$p.tar.bz2 GMT5_$$p.tar.bz2" >> gmt_server_job.sh; \
 	done
-	for p in basic gdal pdf; do \
-		echo "rm -f windows/GMT_$${p}_install.exe" >> gmt_server_job.sh; \
-		echo "(cd windows; $(LN_S) GMT$(GMT_VERSION)_$${p}_install.exe GMT_$${p}_install.exe)" >> gmt_server_job.sh; \
+	for p in install32 install64 pdf_install; do \
+		echo "rm -f windows/GMT_$${p}.exe" >> gmt_server_job.sh; \
+		echo "rm -f windows/GMT5_$${p}.exe" >> gmt_server_job.sh; \
+		echo "(cd windows; $(LN_S) GMT$(GMT_VERSION)_$${p}.exe GMT5_$${p}.exe)" >> gmt_server_job.sh; \
 	done
 	echo "rm -f $(LIVEFTPDIR2)/gmt_server_job.sh" >> gmt_server_job.sh
 	scp gmt_server_job.sh $(FTPSERVER2):$(LIVEFTPDIR2)
@@ -216,12 +216,12 @@ update-ftp-test:
 	rm -f gmt_server_job.sh
 
 update-gshhs-test:
-	ssh $(FTPSERVER2) 'rm -rf $(LIVEFTPDIR2)/*GSHHS*'
+#	ssh $(FTPSERVER2) 'rm -rf $(LIVEFTPDIR2)/*GSHHS*'
 	scp ../ftp/GSHHS*.bz2 $(FTPSERVER2):$(LIVEFTPDIR2)
 	scp ../ftp/GSHHS*.exe $(FTPSERVER2):$(LIVEFTPDIR2)/windows
 	echo "cd $(LIVEFTPDIR2)" > gmt_server_job.sh
 	for p in coast high full; do \
-		echo "rm -f {GMT,GSHHS}_$$p.tar.bz2" >> gmt_server_job.sh; \
+		echo "rm -f GSHHS_$$p.tar.bz2" >> gmt_server_job.sh; \
 		echo "$(LN_S) GSHHS$(GSHHS_VERSION)_$$p.tar.bz2 GSHHS_$$p.tar.bz2" >> gmt_server_job.sh; \
 	done
 	echo "rm -f windows/GSHHS_highfull_install.exe" >> gmt_server_job.sh;
@@ -238,17 +238,21 @@ update-ftp-local:
 	fi
 	rm -rf ftp
 	mkdir -p ftp/windows ftp/contrib
-	sed -e 'sXpub/gmtXpub/pwessel/gmttestXg' ../guru/install_gmt > ftp/install_gmt
+	sed -e 'sXpub/gmtXpub/pwessel/gmttestXg' ../guru/install_gmt.sh > ftp/install_gmt.sh
 	cp -f ../ftp/GMT*.bz2 ../ftp/.message ../ftp/README.GMT ../ftp/VERSION ftp
 	cp -f ../ftp/GMT*.exe ftp/windows
 	cp -f ../ftp/gawk*.zip ftp/windows
+	cp -f ../ftp/netcdf-3.6.3_win.zip ftp/windows
+	cp -f ../ftp/Whale-watching_symbols_for_GMT.zip ftp/contrib
 	for p in doc share src suppl triangle; do \
 		\rm -f ftp/GMT_$$p.tar.bz2; \
-		(cd ftp; $(LN_S) GMT$(GMT_VERSION)_$$p.tar.bz2 GMT_$$p.tar.bz2); \
+		\rm -f ftp/GMT5_$$p.tar.bz2; \
+		(cd ftp; $(LN_S) GMT$(GMT_VERSION)_$$p.tar.bz2 GMT5_$$p.tar.bz2); \
 	done
-	for p in basic gdal pdf; do \
-		rm -f windows/GMT_$$p_install.exe; \
-		(cd ftp/windows; $(LN_S) GMT$(GMT_VERSION)_$${p}_install.exe GMT_$${p}_install.exe); \
+	for p in install32 install64 pdf_install; do \
+		rm -f windows/GMT_$$p.exe; \
+		rm -f windows/GMT5_$$p.exe; \
+		(cd ftp/windows; $(LN_S) GMT$(GMT_VERSION)_$${p}.exe GMT5_$${p}.exe); \
 	done
 
 update-gshhs-local:
@@ -256,7 +260,7 @@ update-gshhs-local:
 	cp -f ../ftp/GSHHS*.bz2 ftp
 	cp -f ../ftp/GSHHS*.exe ftp/windows
 	for p in coast high full; do \
-		\rm -f ftp/{GMT,GSHHS}_$$p.tar.bz2; \
+		\rm -f ftp/GSHHS_$$p.tar.bz2; \
 		(cd ftp; $(LN_S) GSHHS$(GSHHS_VERSION)_$$p.tar.bz2 GSHHS_$$p.tar.bz2); \
 	done
 	rm -f windows/GSHHS_highfull_install.exe
@@ -272,7 +276,7 @@ clean-local:
 clean-test:
 	ssh $(FTPSERVER2) rm -rf $(LIVEFTPDIR2)/*
 	ssh $(WEBSERVER2) rm -rf $(LIVEWWWDIR2)/gmt $(LIVEWWWDIR2)/gmt.html $(LIVEWWWDIR2)/index.html
-	
+
 netcdf: ../ftp/netcdf.tar.bz2
 
 ../ftp/netcdf.tar.bz2:
@@ -298,9 +302,6 @@ hitmap:
 ../registration/gmt_usage.jpg:		../registration/GMT_old_unique_sites.d
 		(cd ../registration; GMT_usage_map.sh map)
 
-www/gmt/gmt_releases.html:	gmt_releases_template.html ../doc/html/GMT_Docs/GMT_Docs.html
+www/gmt/gmt_releases.html:	gmt_releases_template.html
 	mkdir -p www/gmt
-	(cd www/gmt; grep -H "scientists since 1988" ../../../doc/html/GMT_Docs/*.html | awk '{print $$1}' | tr '/:' '  ' | awk '{printf "s:CHAPTER1LINK:doc/html/GMT_Docs/%s:g\n", $$NF}' > /tmp/tmp.sed)
-	sed -f /tmp/tmp.sed < gmt_releases_template.html > www/gmt/gmt_releases.html
-	
-	
+	cp -f gmt_releases_template.html www/gmt/gmt_releases.html
